@@ -1,1 +1,2 @@
 DIST gmusicapi-3.1.0.tar.gz 121123 SHA256 9f47bd77b0f3d30e0cc5781560c01667cec55ed4c89b9ecbf8f8a22d792ba74d SHA512 cdc7bfdd7702c77a821e6dcaabf0ce69c8af1a970c851cdaa261cb8c91706e3b59b75bd9f7a0b7b774d4a7808cf5c2d2572cdaa36998334359da7daf59d08b7e WHIRLPOOL 9dfbfa3483048bce227d21c2bcf49655ce7986f87f5ab49956e252816d3f9f93d41e6ef6164f79e7e2e044ddfc37da9ee6e2ac9bfc0408d864015c7281dbb461
+DIST gmusicapi-3.1.0_p20140309.tar.gz 119062 SHA256 d1c9054d32517549c4b051aba77979f7fa6f773d892e942dc06b641015de9d43 SHA512 304062e1838e5ad6c229d023adf3dd7fe39bb19c58df3b594744fbd875b6f8b84aa053ce5943a3ec4f2e38abff699f41bacce082f7750a805d01ec56292943af WHIRLPOOL 3592f0ac2e432d056dded915fa263163f5fc10d43aa2ea82da91c87c5e3b44f24038e35890149e7cfa2031fcda87de1f060db9ea30def2b67c395a2c16856e56
