@@ -1,0 +1,32 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=5
+PYTHON_COMPAT=(python2_7)
+
+inherit vcs-snapshot distutils-r1
+
+DESCRIPTION="An unofficial api for Google Play Music"
+HOMEPAGE="https://github.com/simon-weber/Unofficial-Google-Music-API/"
+COMMIT_ID="6d79fd11a802ef41ddd34103b971b4280196987f"
+SRC_URI="https://github.com/simon-weber/Unofficial-Google-Music-API/archive/${COMMIT_ID}.tar.gz -> ${P}.tar.gz"
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~amd64"
+IUSE="test"
+
+RDEPEND="dev-python/appdirs[${PYTHON_USEDEP}]
+	dev-python/decorator[${PYTHON_USEDEP}]
+	dev-python/mock[${PYTHON_USEDEP}]
+	dev-python/oauth2client[${PYTHON_USEDEP}]
+	dev-python/requests[${PYTHON_USEDEP}]
+	media-libs/mutagen[${PYTHON_USEDEP}]"
+DEPEND="${RDEPEND}
+	test? ( dev-python/nose[${PYTHON_USEDEP}]
+		dev-python/proboscis[${PYTHON_USEDEP}] )
+	dev-python/setuptools[${PYTHON_USEDEP}]"
+
+python_test() {
+	${PYTHON} ${PN}/test/run_tests.py --group=local || die
+}
